<resources>
    <string name="app_name">OxyRhythm</string>
    <string name="get_started_btn_label">Sign Up</string>
    <string-array name="Sex_Options">
        <item>Male</item>
        <item>Female</item>>
    </string-array>
    <string-array name="Height_Units">
        <item>cm</item>
        <item>ft</item>>
    </string-array>
    <string-array name="Weight_Units">
        <item>kg</item>
        <item>lbs</item>>
    </string-array>
    <string name="valid_name_input">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="enter_your_first_name_hint">Enter Your First Name</string>
    <string name="enter_your_last_name_hint">Enter Your Last Name</string>
    <string name="next_btn_label">Next</string>
    <string name="enter_your_height_hint">Enter Your Height</string>
    <string name="enter_your_weight_hint">Enter Your Weight</string>
    <string name="set_up_health_details_page_title">Set Up Health Details</string>
    <string name="sex_label">Sex</string>
    <string name="birth_year_label">Birth Year</string>
    <string name="height_label">Height</string>
    <string name="weight_label">Weight</string>
    <string name="year_hint">Year</string>
    <string name="settings">Profile</string>
    <string name="SettingUp">
        1. Place you finger into the device. \n\n
        2.Ensure the device is properly connected to your smart phone bluetooth \n\n
        3.Click on the notification and set up your profile to begin using our OxyRhythm \n\n
        4.Once you finish setting up your profile go ahead and start exploring your Health\'s Vital Rhythm Tracker!
        5.





    </string>


</resources>