<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterUserActivity">

    <EditText
        android:id="@+id/birth_year_input"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="9dp"
        android:ems="10"
        android:hint="@string/year_hint"
        android:inputType="number"
        android:maxLength="4"
        app:layout_constraintStart_toEndOf="@id/birth_day_input"
        app:layout_constraintTop_toBottomOf="@id/l_name_input" />

    <TextView
        android:id="@+id/weight_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:text="@string/weight_label"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/height_label" />

    <TextView
        android:id="@+id/height_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:text="@string/height_label"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sex_label" />

    <TextView
        android:id="@+id/birthday_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:text="@string/date_of_birth_label"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/l_name_label" />

    <TextView
        android:id="@+id/sex_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:text="@string/sex_label"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/birthday_label" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-500dp"
        android:text="@string/set_up_health_details_page_title"
        android:textColor="#E91E63"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/f_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="50dp"
        android:text="First Name"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_name" />

    <TextView
        android:id="@+id/l_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:text="Last Name"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/f_name_label" />

    <EditText
        android:id="@+id/f_name_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="34dp"
        android:ems="10"
        android:hint="@string/enter_your_first_name_hint"
        android:digits="@string/valid_name_input"
        android:inputType="text|textPersonName"
        app:layout_constraintStart_toEndOf="@id/birthday_label"
        app:layout_constraintTop_toBottomOf="@+id/app_name" />

    <EditText
        android:id="@+id/l_name_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="9dp"
        android:ems="10"
        android:hint="@string/enter_your_last_name_hint"
        android:digits="@string/valid_name_input"
        android:inputType="text|textPersonName"
        app:layout_constraintStart_toEndOf="@id/birthday_label"
        app:layout_constraintTop_toBottomOf="@id/f_name_input" />

    <EditText
        android:id="@+id/birth_month_input"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="9dp"
        android:ems="10"
        android:hint="@string/month_hint"
        android:inputType="number"
        android:maxLength="2"
        app:layout_constraintStart_toEndOf="@id/birthday_label"
        app:layout_constraintTop_toBottomOf="@id/l_name_input" />

    <EditText
        android:id="@+id/birth_day_input"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="9dp"
        android:ems="10"
        android:hint="@string/day_hint"
        android:inputType="number"
        android:maxLength="2"
        app:layout_constraintStart_toEndOf="@id/birth_month_input"
        app:layout_constraintTop_toBottomOf="@id/l_name_input" />

    <Button
        android:id="@+id/save_usr_data_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/next_btn_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/weight_label" />

    <EditText
        android:id="@+id/height_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="66dp"
        android:ems="10"
        android:hint="@string/enter_your_height_hint"
        android:inputType="number|numberDecimal"
        app:layout_constraintStart_toEndOf="@id/birthday_label"
        app:layout_constraintTop_toBottomOf="@+id/birth_day_input" />

    <EditText
        android:id="@+id/weight_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="9dp"
        android:ems="10"
        android:hint="@string/enter_your_weight_hint"
        android:inputType="number|numberDecimal"
        app:layout_constraintStart_toEndOf="@id/birthday_label"
        app:layout_constraintTop_toBottomOf="@id/height_input" />

    <Spinner
        android:id="@+id/sex_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="22dp"
        app:layout_constraintStart_toEndOf="@id/birthday_label"
        app:layout_constraintTop_toBottomOf="@id/birth_month_input" />


</androidx.constraintlayout.widget.ConstraintLayout>